# trust

./: .gitignore  CODING_STANDARDS.md  README.md  index.html  nohup.out  package.json  server.js  test-charms-demo.html  test-e2e.html  test-governance.html  test-integration.html  test-noise-fix.html  words.html  words_bitcoin.html
bitcoin/: Dockerfile  deploy-charms.sh  signet-test.sh
charm-apps/trust-game/: Cargo.toml  spell.yaml  test_input.json
charm-apps/trust-game/src/: governance.rs  lib.rs  main.rs
css/: governance.css  reputation-feedback.css  slides.css  ux-polish.css
docs/: ARCHITECTURE.md  HACKATHON_JUDGES.md  QUICKSTART.md  ROADMAP.md  SERVER_SETUP.md  SIGNET_INTEGRATION.md
js/: main.js
js/bitcoin/: AssetMap.js  BitcoinStrategies.js  BitcoinTxBuilder.js  Bootstrap.js  CharmsCLIProver.js  CharmsClient.js  CharmsClientAPI.js  CharmsRPC.js  GameGovernance.js  GameReputation.js  GovernanceIntegration.js  GovernanceUI.js  OnChainUI.js  ReputationFeedback.js  SandboxReputation.js  UnisatWallet.js  WalletManager.js
js/core/: Button.js  GameState.js  PayoffsUI.js  SlideRegistry.js  SlideSelect.js  SlideValidator.js  Slideshow.js  TextBox.js  UXFeedback.js
js/lib/: helpers.js
js/sims/: Iterated.js  PD.js  SandboxUI.js  Tournament.js
js/slides/: 0_Slides_Intro.js  1_Slides_OneOff.js  2_Slides_Iterated.js  3_Slides_Tournament.js  4_Slides_Evolution.js  5_Slides_Distrust.js  6_Slides_Noise.js  7_Slides_Sandbox.js  8_Slides_Conclusion.js  A_Slides_Governance.js  B_Slides_ReputationReveal.js
notes/: index.html
peeps/: index.html
