[package]
name = "trust-game"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Trust Game Contributors"]
description = "Covenant: Bitcoin Governance Through Game Theory - Charms smart contract for on-chain game validation"

[dependencies]
charms = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp1-zkvm = "3.4"

[lib]
name = "trust_game"
path = "src/lib.rs"

[[bin]]
name = "trust-game"
path = "src/main.rs"

[features]
default = []
